--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,9 @@ dependencyResolutionManagement {
 
 rootProject.name = "NewsMMApp"
 include ':app'
+include ':news:news_data'
+include ':news:news_domain'
+include ':news:domain'
+include ':search:search_data'
+include ':search:search_domain'
+include ':search:search_presentation'
