--- a/news/news_data/build.gradle
+++ b/news/news_data/build.gradle
@@ -31,10 +31,14 @@ android {
 
 dependencies {
 
-    implementation Deps.core
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation Dep.core
+    implementation Dep.appcompat
+    implementation Dep.materialUI
+    implementation Dep.constraintlayout
+
+    testImplementation TestImplDep.testImplJunit
+
+    androidTestImplementation AndroidTestImplDep.androidTestImplJunit
+    androidTestImplementation AndroidTestImplDep.androidTestImplJunit
+
 }
