--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -30,9 +32,17 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures{
+        viewBinding true
+    }
+
 }
 
 dependencies {
+
+    implementation project(":search:search_presentation")
+    implementation project(":news:news_presentation")
 
     implementation Dep.core
     implementation Dep.appcompat
@@ -43,5 +53,8 @@ dependencies {
 
     androidTestImplementation AndroidTestImplDep.androidTestImplJunit
     androidTestImplementation AndroidTestImplDep.androidTestImplJunit
+
+    implementation DaggerHilt.hilt
+    kapt DaggerHilt.hiltCompiler
 
 }
