--- a/settings.gradle
+++ b/settings.gradle
@@ -17,7 +17,7 @@ rootProject.name = "NewsMMApp"
 include ':app'
 include ':news:news_data'
 include ':news:news_domain'
-include ':news:domain'
+include ':news:news_presentation'
 include ':search:search_data'
 include ':search:search_domain'
 include ':search:search_presentation'
