Add search and news views navigations

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 
     implementation project(":search:search_presentation")
     implementation project(":news:news_presentation")
+    implementation project(":common:common_utils")
 
     implementation Dep.core
     implementation Dep.appcompat
