--- a/search/search_presentation/build.gradle
+++ b/search/search_presentation/build.gradle
@@ -31,6 +31,8 @@ android {
 
 dependencies {
 
+    implementation project(":common:common_utils")
+
     implementation Dep.core
     implementation Dep.appcompat
     implementation Dep.materialUI
