Add common network module

--- a/news/news_data/build.gradle
+++ b/news/news_data/build.gradle
@@ -35,6 +35,8 @@ android {
 
 dependencies {
 
+    implementation project(":common:common_utils")
+
     implementation Dep.core
     implementation Dep.appcompat
     implementation Dep.materialUI
@@ -48,6 +50,8 @@ dependencies {
     implementation DaggerHilt.hilt
     kapt DaggerHilt.hiltCompiler
 
-
+    implementation Retrofit.retrofit
+    implementation Retrofit.gsonConverter
+    implementation Retrofit.okHttp
 
 }
