--- a/common/common_utils/build.gradle
+++ b/common/common_utils/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -31,10 +34,21 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation Dep.core
+    implementation Dep.appcompat
+    implementation Dep.materialUI
+    implementation Dep.constraintlayout
+
+    testImplementation TestImplDep.testImplJunit
+
+    androidTestImplementation AndroidTestImplDep.androidTestImplJunit
+    androidTestImplementation AndroidTestImplDep.androidTestImplJunit
+
+    implementation DaggerHilt.hilt
+    kapt DaggerHilt.hiltCompiler
+
+    implementation Retrofit.retrofit
+    implementation Retrofit.gsonConverter
+    implementation Retrofit.okHttp
+
 }
