Add newsrepository impl

--- a/news/news_data/build.gradle
+++ b/news/news_data/build.gradle
@@ -36,6 +36,7 @@ android {
 dependencies {
 
     implementation project(":common:common_utils")
+    implementation project(":news:news_domain")
 
     implementation Dep.core
     implementation Dep.appcompat
