--- a/news/news_domain/build.gradle
+++ b/news/news_domain/build.gradle
@@ -34,6 +34,8 @@ android {
 
 dependencies {
 
+    implementation project(":common:common_utils")
+
     implementation Dep.core
     implementation Dep.appcompat
     implementation Dep.materialUI
