--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,7 @@ dependencies {
     implementation DaggerHilt.hilt
     kapt DaggerHilt.hiltCompiler
 
+    implementation Room.room
+    kapt Room.roomCompiler
+
 }
