--- a/news/news_data/build.gradle
+++ b/news/news_data/build.gradle
@@ -55,4 +55,7 @@ dependencies {
     implementation Retrofit.gsonConverter
     implementation Retrofit.okHttp
 
+    implementation Room.room
+    kapt Room.roomCompiler
+
 }
